# feotest

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml
.github/workflows/: ci.yml
docs/: DEVELOPER-API.md  DOMAIN-ONTOLOGY.md  USER-GUIDE.md
examples/: sample_html_report.rs  sentinel_demo.rs
feotest-macros/: Cargo.toml
feotest-macros/src/: expand.rs  include_baselines.rs  lib.rs  measure_expand.rs  measure_parse.rs  parse.rs  sentinel.rs  sentinel_impl.rs  service_contract_factory.rs  use_case_factory.rs
plan/: CRATES-IO-PREP.md  DES-HTML-REPORT.md  DESIGN.md  IMPL-VERDICT-XML.md  INITIAL.md  REQ-R-bootstrap-fixture-upgrade.md  REQ-R-decision-rule-conformance.md  REQ-R-latency-percentile-minimums.md  REQ-R-risk-driven-sizing.md
src/: lib.rs
src/contract/: builder.rs  conformance.rs  duration.rs  evaluation.rs  json_matcher.rs  mod.rs
src/controls/: config.rs  cost.rs  mod.rs  run.rs  tokens.rs
src/criteria/: builder.rs  counts.rs  criterion.rs  mod.rs  result.rs
src/experiment/: engine.rs  explore.rs  judgement.rs  measure.rs  mod.rs  optimize.rs
src/latency/: criterion.rs  dimension.rs  enforcement.rs  mod.rs  percentile.rs  resolver.rs  thresholds.rs
src/latency/snapshots/: feotest__latency__dimension__serialize_tests__latency_dimension.snap
src/model/: defect.rs  mod.rs  outcome.rs  sample.rs  types.rs
src/ptest/: approach.rs  baseline.rs  builder.rs  contract.rs  diagnostics.rs  disclosure.rs  mod.rs  probabilistic_test.rs  runner.rs  validation.rs
src/reporting/: console.rs  explore_html.rs  html.rs  junit.rs  mod.rs  transparent.rs  verdict-report.xslt  verdict_xml.rs
src/reporting/snapshots/: feotest__reporting__console__tests__early_termination.snap  feotest__reporting__console__tests__fail_verdict.snap  feotest__reporting__console__tests__inconclusive_covariate_misalignment.snap  feotest__reporting__console__tests__inconclusive_verdict.snap  feotest__reporting__console__tests__pass_verdict.snap  feotest__reporting__console__tests__suite_summary.snap  feotest__reporting__console__tests__verdict_with_warnings.snap  feotest__reporting__transparent__tests__early_termination_failure_inevitable.snap  feotest__reporting__transparent__tests__early_termination_success_guaranteed.snap  feotest__reporting__transparent__tests__fail_verdict_confidence_first.snap  feotest__reporting__transparent__tests__fail_verdict_sample_size_first.snap  feotest__reporting__transparent__tests__feasibility_warning.snap  feotest__reporting__transparent__tests__inconclusive_verdict.snap  feotest__reporting__transparent__tests__pass_verdict_risk_driven.snap  feotest__reporting__transparent__tests__pass_verdict_threshold_first.snap  feotest__reporting__transparent__tests__smoke_intent_label.snap  feotest__reporting__verdict_xml__tests__xml_fail_record.snap  feotest__reporting__verdict_xml__tests__xml_full_record.snap  (+10 more)
src/sentinel/: content.rs  embedded.rs  mod.rs  resolver.rs  runner.rs
src/sentinel/sinks/: file.rs  (+4 more)
src/service_contract/: mod.rs
src/spec/: baseline.rs  common.rs  expiration.rs  explore.rs  keys.rs  matching.rs  mod.rs  namer.rs  optimization.rs  projection.rs  resolver.rs  selector.rs
src/statistics/: defaults.rs  evaluator.rs  feasibility.rs  latency.rs  mod.rs  proportion.rs  risk_driven_sizing.rs  sample_size.rs  threshold.rs  types.rs
src/usecase/: mod.rs
src/verdict/: assessment.rs  mod.rs  record.rs
tests/: architecture.rs  baseline_expiration.rs  code_isolation.rs  conformance.rs  console_rendering.rs  contract_driven.rs  covariate_baseline.rs  early_termination.rs  ensure_retired.rs  explore_output.rs  fused_contract.rs  html_report.rs  interchange_conformance.rs  latency.rs  macro_integration.rs  matching_compile.rs  measure_macro_integration.rs  optimize_output.rs  reference_matching.rs  risk_driven_sizing.rs  run_scoped_budget.rs  sentinel_compile.rs  sentinel_demo.rs  sentinel_sinks.rs  sizing_disclosure.rs  transparent_stats_test.rs  verdict_pipeline.rs  verdict_serde.rs  verdict_xml.rs  verdict_xsd_conformance.rs
tests/common/: mod.rs
tests/conformance/: SCOPE.json  VERSION  cases.schema.json  feasibility.json  latency_percentile.json  latency_percentile_minimums.json  latency_threshold.json  latency_threshold_bootstrap.json  manifest.json  power_analysis.json  regression_decision.json  risk_driven_sizing.json  threshold_derivation.json  verdict.json  wilson_ci.json  wilson_lower.json
tests/fixtures/: test-baseline.yaml
tests/snapshots/: verdict_serde__fail_with_distribution.snap  verdict_serde__inconclusive_covariate_misalignment.snap  verdict_serde__pass_minimal.snap  verdict_serde__pass_with_baseline_provenance.snap  verdict_serde__pass_with_pacing.snap
(+13 files in other folders)
