[workspace]
members = ["feotest-macros"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[package]
name = "feotest"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Probabilistic testing framework for stochastic services"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/javai-org/feotest"
keywords = ["testing", "probabilistic", "statistics", "stochastic", "llm"]
categories = ["development-tools::testing"]

[features]
default = []
json-matcher = ["dep:serde_json"]

[dependencies]
feotest-macros = { path = "feotest-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = "0.9"
statrs = "0.18"

[dev-dependencies]
approx = "0.5"
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
