[workspace]
members = ["feotest-macros"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# restriction-group lint, not covered by pedantic. Forces every
# #[allow(...)] to carry a reason = "..." string so the deferred
# debt is grep-able.
allow_attributes_without_reason = "warn"

[package]
name = "feotest"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Probabilistic testing framework for stochastic services"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/javai-org/feotest"
keywords = ["testing", "probabilistic", "statistics", "stochastic", "llm"]
categories = ["development-tools::testing"]

[features]
default = []
json-matcher = ["dep:serde_json"]

[dependencies]
clap = { version = "4", features = ["derive"] }
feotest-macros = { path = "feotest-macros" }
include_dir = "0.7"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
sha2 = "0.10"
serde_yaml = "0.9"
statrs = "0.18"

[dev-dependencies]
approx = "0.5"
insta = "1"
serde_json = "1"
tempfile = "3"
trybuild = "1"

[lints]
workspace = true
