[workspace]
members = ["feotest-macros"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# restriction-group lint, not covered by pedantic. Forces every
# #[allow(...)] to carry a reason = "..." string so the deferred
# debt is grep-able.
allow_attributes_without_reason = "warn"

[package]
name = "feotest"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Probabilistic testing framework for stochastic services"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/javai-org/feotest"
keywords = ["testing", "probabilistic", "statistics", "stochastic", "llm"]
categories = ["development-tools::testing"]

[features]
default = []
# Kept for backward compatibility. `serde_json` is now a required dependency
# because verdict sinks (file + webhook) need structured JSON output, so
# enabling this feature is a no-op.
json-matcher = []
# Enables the `WebhookVerdictSink` (blocking HTTP POST of verdicts). Pulls
# in `ureq` and nothing else; the default build remains free of any HTTP
# client.
webhook = ["dep:ureq"]

[dependencies]
clap = { version = "4", features = ["derive"] }
feotest-macros = { path = "feotest-macros" }
include_dir = "0.7"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
serde_yaml = "0.9"
statrs = "0.18"
ureq = { version = "2", features = ["json"], optional = true }

[dev-dependencies]
approx = "0.5"
insta = { version = "1", features = ["json"] }
tempfile = "3"
trybuild = "1"

[lints]
workspace = true
